Altered default surefire arguments.